kdeadmin (4:4.3.0-2) UNRELEASED; urgency=high

  * Add watch file.
  * Refresh 01_system_config_printer_kde_cupsutils.diff to correctly import 
    options.py. THIS NEED TO BE TESTED !
  * Add patch 03_stick_to_qt.diff to avoid a "missing kpushbutton" crash
    (Closes: #540735)
    - Set urgency high for RC bugfixing.
  * Add patch 04_fix_runtime_fail_type_mismatch.diff to fix a runtime failure
    due to type mismatch.

 -- Didier Raboud <didier@raboud.com>  Sat, 08 Aug 2009 21:42:18 +0200

kdeadmin (4:4.3.0-1) unstable; urgency=low

  * New upstream release.
  * Bump build depends to >= 4:4.3.0.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Tue, 04 Aug 2009 09:03:12 +0200

kdeadmin (4:4.2.96-1) experimental; urgency=low

  * New upstream release.

  +++ Changes by Didier Raboud:

  * Fix "gnome/gtk/glade dependencies" in system-config-printer-kde by
    including Josselin Mouette's patch to cope with system-config-printer
    split. (Closes: #525558, #536233)

  +++ Changes by Martin Alfke:

  * Remove patch 03_set_knetworkconf_backends_scriptsdir.diff
    which has been included upstream

  +++ Changes by Fathi Boudra:

  * Bump kdepimlibs-dev build dependency to >= 4:4.2.96.
  * Bump Standards-Version from 3.8.1 to 3.8.2 (no changes needed).
  * Merge system-config-printer-kde patches for cupsutils usage and the split.
  * Update installed files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 17 Jul 2009 12:17:57 +0200

kdeadmin (4:4.2.4-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Sune Vuorela:

  * Fix sections.
  * Don't ship kcron manpages. Kcron is now a kcm module.

  +++ Changes by Modestas Vainius:

  * Fix kuser to start UID/GID at 1000 when adding new users. (Closes: #434883)

  +++ Changes by Fathi Boudra:

  * Bump Standards-Version from 3.8.0 to 3.8.1 (no changes needed).

  +++ Changes by Martin Alfke:

  * Add gentoo patch (03_set_knetworkconf_backends_scriptsdir.diff) for proper